--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,5 +4,7 @@
   font-size: 72px;
   line-height: 76px;
   color: #ffffff;
-  margin: 0;
+  margin: 0 40px 0 0;
+  width: 460px;
 }
+/*calc(100% - 460px - 484px)*/
