--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,10 +1,9 @@
 /*Блок в блоке*/
 .place {
   min-width: 984px;
-  min-height: 660px;
   margin: 80px 0 0;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
 .place:first-child {
