--- a/pages/index.css
+++ b/pages/index.css
@@ -26,6 +26,8 @@
 
 /*Блок places*/
 @import url(../blocks/places/places.css);
+
+/*Блок place*/
 @import url(../blocks/place/place.css);
 @import url(../blocks/place/__container/place__container.css);
 @import url(../blocks/place/__title/place__title.css);
@@ -35,31 +37,19 @@
 @import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
-  
 
+/*Блок cover*/
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*Блок cover*/
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
 
 /*Body*/
 .page {
@@ -95,6 +85,16 @@
 .place__link,
 .place__paragraph,
 .place__container,
-.place__wrapper {
+.place__wrapper,
+.cover,
+.cover__link,
+.cover__overlay,
+.cover__background,
+.cover__title,
+.cover__subtitle,
+.footer,
+.footer__links,
+.footer__link,
+.footer__copyright {
   border: 1px solid red;
 }
