--- a/blocks/place/__container/place__container.css
+++ b/blocks/place/__container/place__container.css
@@ -1,5 +1,6 @@
 /*Контейнер для заголовка и ссылки*/
 .place__container {
-  flex-direction: row;
-  display: flex;
+  display: grid;
+  grid-template: 1fr / minmax(460px, 0.95fr) minmax(484px, 1fr);
+  gap: 40px;
 }
