--- a/blocks/place/__wrapper/place__wrapper.css
+++ b/blocks/place/__wrapper/place__wrapper.css
@@ -1,9 +1,8 @@
 /*Контейнер для картинки и параграфов*/
 .place__wrapper {
-  height: 460px;
+  min-height: 460px;
   margin: 48px 0 0;
-  display: flex;
- /* display: grid;
-  grid-template: 1fr / 0.95fr 1fr;
-  gap: calc(100% - 0.95fr - 1fr)*/
+  display: grid;
+  grid-template: 1fr / minmax(460px, 0.95fr) minmax(484px, 1fr);
+  gap: 40px;
 }
