--- a/blocks/lead/__wrapper/lead__wrapper.css
+++ b/blocks/lead/__wrapper/lead__wrapper.css
@@ -1,4 +1,13 @@
 .lead__wrapper {
-  width: 984px;
-  margin: 64px auto 0;
+  width: 100%;
+  margin: 64px 0 0;
+}
+
+/*Блок*/
+.lead {
+  width: 100%;
+  min-height: 1005px;
+  margin: 56px 0 0;
+  padding: 0 148px 0;
+  box-sizing: border-box;
 }
