--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -2,7 +2,8 @@
 .cover__overlay {
   background-color: #2a2c2f;
   width: 100%;
-  height: 100%;
+  box-sizing: border-box;
+  min-height: 740px;
   opacity: 30%;
   z-index: 2;
   position: absolute;
