--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,8 @@
 /*Блок*/
 .cover {
-  margin: 92px 48px 0;
-  min-width: 1184px;
+  margin: 92px 0 0;
+  padding: 0 48px 0;
+  width: 100%;
+  box-sizing: border-box;
   min-height: 740px;
 }
