--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,9 +1,13 @@
 /*Настоящая страна не в выпусках новостей, а здесь.*/
 .lead__subtitle {
-    margin: 32px auto 0;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 36px;
-    text-align: center;
-    color: #ffffff;
+  margin: 32px 0 0;
+  padding: 0 172px 0;
+  box-sizing: border-box;
+  width: 100%;
+  font-weight: 400;
+  font-size: calc((100vw - 320px) / (1280 - 320) * (30 - 16) + 16px);
+  line-height: 120%;
+  text-align: center;
+  color: #ffffff;
+  /* min-width: 640px;*/
 }
