--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,9 +1,13 @@
 /*Путешествия по России*/
 .lead__title {
-  margin: 0 auto;
+  margin: 0;
+  padding: 0 132px 0;
+  width: 100%;
+  box-sizing: border-box;
   font-weight: 900;
-  font-size: 96px;
-  line-height: 100px;
+  font-size: calc((100vw - 320px) / (1280 - 320) * (96 - 16) + 16px);
+  line-height: 125%;
   text-align: center;
   color: #ffffff;
+  
 }
