--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,9 @@
 /*Блок в блоке*/
 .place {
-  min-width: 984px;
+  /*min-width: 984px;*/
+  width: 100%;
+  padding: 0;
+  box-sizing: border-box;
   margin: 80px 0 0;
   display: flex;
   flex-direction: column;
