--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,5 +2,8 @@
 .places {
   display: flex;
   flex-direction: column;
-  margin: 92px 148px auto;
+  margin: 92px 0 0;
+  width: 100%;
+  padding: 0 148px 0;
+  box-sizing: border-box;
 }
