--- a/pages/index.css
+++ b/pages/index.css
@@ -55,7 +55,7 @@
 .page {
   /*ширина страницы от 1280 пикселей — от стандартных ноутбуков и до бесконечности*/
   min-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
   font-family: "Inter", Arial, sans-serif;
   background-color: #2a2c2f;
 }
@@ -96,5 +96,7 @@
 .footer__links,
 .footer__link,
 .footer__copyright {
-  border: 1px solid red;
+  /*border: 1px solid red;*/
+  outline: solid 1px red;
+  /*box-sizing: border-box;*/
 }
