--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,7 +3,7 @@
   z-index: 3;
   position: relative;
   top: 0;
-  left:0;
+  left: 0;
   margin: 32px 0 0;
   padding: 0 412px 0;
   width: 100%;
@@ -14,4 +14,8 @@
   text-align: center;
   /*max-width: 360px;*/
   color: #ffffff;
+}
+
+.cover__subtitle:hover ~ .cover__overlay {
+  opacity: 80%;
 }
