--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,7 +1,7 @@
 /*Картинка жд путей на фоне*/
 .cover__background {
   background-image: url(../../../images/cover-trains.jpg);
-  width: 100%;
+  /*width: 100%;*/
   min-height: 740px;
   background-size: 100%;
   object-fit: cover;
