--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,7 +3,7 @@
   z-index: 3;
   position: relative;
   top: 0;
-  left:0;
+  left: 0;
   margin: 245px auto 0;
   font-weight: 900;
   font-size: 72px;
@@ -11,4 +11,8 @@
   text-align: center;
   max-width: 560px;
   color: #ffffff;
+}
+
+.cover__title:hover ~ .cover__overlay {
+  opacity: 80%;
 }
