--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,15 +4,13 @@
   position: relative;
   top: 0;
   left: 0;
-  margin: 32px 0 0;
-  padding: 0 412px 0;
+  margin: 32px auto 0;
   width: 100%;
-  box-sizing: border-box;
   font-weight: 400;
   font-size: 18px;
   line-height: 122%;
   text-align: center;
-  /*max-width: 360px;*/
+  max-width: 360px;
   color: #ffffff;
 }
 
