--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,8 +1,8 @@
 /*Языки ссылки*/
 .header__lang-link {
   font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
+  font-size: calc( (100vw - 480px)/(1280 - 480) * (24 - 18) + 18px);
+  line-height: 111%;
   text-align: right;
   margin: 18px 18px 6px auto;
   color: #ffffff;
