--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,6 +4,7 @@
   font-size: 72px;
   line-height: 76px;
   color: #ffffff;
-  margin: 0 40px 0 0;
-  width: 100%;
+  margin: 0;
+  max-width: 460px;
+  box-sizing: border-box;
 }
