--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,12 +1,13 @@
 /*Блок в блоке*/
 .place {
-  /*min-width: 984px;*/
   width: 100%;
-  padding: 0;
-  box-sizing: border-box;
   margin: 80px 0 0;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: calc(51.2712% - 40px / 2) calc(48.7288% - 40px / 2);
+  column-gap: 40px;
+  row-gap: 48px;
+  padding: 0 148px 0;
+  box-sizing: border-box;
 }
 
 .place:first-child {
