--- a/pages/index.css
+++ b/pages/index.css
@@ -7,7 +7,7 @@
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 
 /*Блок lead*/
-@import url(../blocks/lead/leadd.css);
+@import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__wrapper/lead__wrapper.css);
@@ -29,13 +29,11 @@
 
 /*Блок place*/
 @import url(../blocks/place/place.css);
-@import url(../blocks/place/__container/place__container.css);
 @import url(../blocks/place/__title/place__title.css);
-@import url(../blocks/place/__image/place__image.css);
-@import url(../blocks/place/__wrapper/place__wrapper.css);
 @import url(../blocks/place/__website/place__website.css);
 @import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 
 /*Блок cover*/
@@ -54,8 +52,8 @@
 /*Body*/
 .page {
   /*ширина страницы от 1280 пикселей — от стандартных ноутбуков и до бесконечности*/
-  min-width: 1280px;
-  margin: 0;
+  max-width: 1280px;
+  margin: 0 auto;
   font-family: "Inter", Arial, sans-serif;
   background-color: #2a2c2f;
 }
