--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,8 +1,16 @@
 /*Имя*/
 .footer__copyright {
-font-weight: 400;
-font-size: 14px;
-line-height: 114%;
-color: #FFFFFF;
-margin: 0;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 114%;
+  color: #ffffff;
+  margin: 0;
+}
+
+@media screen and (max-width: 320px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 100%;
+    margin: 16px auto 0 0;
+  }
 }
