--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -5,3 +5,10 @@
   list-style-type: none;
   display: flex;
 }
+
+@media screen and (max-width: 320px) {
+  .footer__links {
+    width: 100%;
+    flex-direction: column;
+  }
+}
