--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,3 +4,17 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 768px) {
+  .footer {
+    margin: 88px 24px 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+    margin: 64px 118px 24px 16px;
+    justify-content: start;
+    flex-direction: column;
+  }
+}
