--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,8 +1,8 @@
 /*Языки ссылки*/
 .header__lang-link {
   font-weight: 400;
-  font-size: calc( (100vw - 480px)/(1280 - 480) * (24 - 18) + 18px);
-  line-height: 111%;
+  font-size: 24px;
+  line-height: 117%;
   text-align: right;
   margin: 18px 18px 6px auto;
   color: #ffffff;
@@ -15,4 +15,29 @@
 
 .header__lang-link:hover {
   opacity: 80%;
+}
+
+@media screen and (max-width: 1024px) {
+  .header__lang-link {
+    margin: 18px 18px 6px auto;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header__lang-link {
+    margin: 18px 18px 6px auto;
+  }
+}
+@media screen and (max-width: 320px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 111%;
+    margin: 14px 18px 8px auto;
+  }
+  .header__lang-link:last-child {
+    margin: 14px 0 8px 0;
+    font-size: 18px;
+    line-height: 111%;
+    text-decoration: none;
+  }
 }
