--- a/blocks/lead/__wrapper/lead__wrapper.css
+++ b/blocks/lead/__wrapper/lead__wrapper.css
@@ -2,3 +2,21 @@
   width: 100%;
   margin: 64px 0 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .lead__wrapper {
+    margin: 56px 0 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead__wrapper {
+    margin: 56px 0 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__wrapper {
+    margin: 40px 0 0;
+  }
+}
