--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,7 +1,6 @@
 /*Картинка жд путей на фоне*/
 .cover__background {
   background-image: url(../../../images/cover-trains.jpg);
-  /*width: 100%;*/
   min-height: 740px;
   background-size: 100%;
   object-fit: cover;
@@ -14,4 +13,22 @@
   flex-direction: column;
   background-size: cover;
   margin: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .cover__background {
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__background {
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__background {
+    min-height: 200px;
+  }
 }
