--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -6,3 +6,26 @@
   box-sizing: border-box;
   min-height: 740px;
 }
+
+@media screen and (max-width: 1024px) {
+  .cover {
+    padding: 0;
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover {
+    margin: 90px 0 0;
+    padding: 0;
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover {
+    margin: 66px 0 0;
+    padding: 0;
+    min-height: 200px;
+  }
+}
