--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -11,3 +11,12 @@
 .footer__link:hover {
   opacity: 80%;
 }
+
+@media screen and (max-width: 320px) {
+  .footer__link {
+    margin: 0 auto 32px 0;
+    display: inline-block;
+    font-size: 24px;
+    line-height: 100%;
+  }
+}
