--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,5 +2,11 @@
 .header__logo {
   margin: 0;
   max-width: 176px;
-  min-height: 52px;
+  height: 100%;
+}
+
+@media screen and (max-width: 320px) {
+  .header__logo {
+    max-width: 142px;
+  }
 }
