--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,8 +2,28 @@
   width: 100%;
   padding: 0 48px 0;
   box-sizing: border-box;
-  min-height: 52px;
+  max-height: 52px;
   margin: 28px 0 0;
   display: flex;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    padding: 0 48px 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    padding: 0 24px 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    padding: 0 16px 0;
+    max-height: 42px;
+    margin: 16px 0 0;
+  }
 }
