--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -3,6 +3,28 @@
   margin: 33px auto 0 0;
   font-weight: 700;
   font-size: 12px;
-  line-height: 18px;
+  line-height: 150%;
   color: #ffffff;
+}
+
+
+@media screen and (max-width: 1024px) {
+  .intro__list {
+    font-size: 12px;
+    line-height: 150%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .intro__list {
+    font-size: 12px;
+    line-height: 150%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro__list {
+    font-size: 12px;
+    line-height: 150%;
+  }
 }
