--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,6 +3,6 @@
   margin: 40px auto 0 0;
   font-weight: 400;
   font-size: 16px;
-  line-height: 26.08px;
+  line-height: 163%;
   color: #ffffff;
 }
