--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -3,6 +3,13 @@
   margin: 0 auto 0 0;
   font-weight: 900;
   font-size: 54px;
-  line-height: 58px;
+  line-height: 107%;
   color: #ffffff;
+}
+
+@media screen and (max-width: 320px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 109%;
+  }
 }
