--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,3 +4,23 @@
   max-width: 690px;
 }
 
+@media screen and (max-width: 1024px) {
+  .intro {
+    margin: 92px 286px 0 48px;
+    max-width: 690px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .intro {
+    margin: 88px 24px 0;
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro {
+    margin: 64px 16px 0;
+    max-width: 288px;
+  }
+}
