--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,7 +3,20 @@
   margin: 8px auto 0 0;
   font-weight: 400;
   font-size: 10px;
-  line-height: 14px;
+  line-height: 140%;
   color: #ffffff;
   letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
+
+@media screen and (max-width: 768px) {
+  .lead__caption {
+    margin: 8px auto 0 48px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__caption {
+    margin: 8px auto 0 16px;
+  }
 }
