--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -6,3 +6,33 @@
   object-fit: cover;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 1024px) {
+  .lead__image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead__image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-sizing: border-box;
+  }
+}
