--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,3 +9,24 @@
   color: #ffffff;
   max-width: 640px;
 }
+
+@media screen and (max-width: 1024px) {
+  .lead__subtitle {
+    margin: 32px auto 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead__subtitle {
+    margin: 32px auto 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__subtitle {
+    margin: 16px auto 0;
+    font-size: 16px;
+    line-height: 125%;
+    max-width: 288px;
+  }
+}
