--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,9 +2,34 @@
 .photo-grid {
   margin: 92px 0 0;
   display: grid;
-  grid-template: repeat(4, 1fr) / repeat(3, 1fr);
+  grid-template: repeat(3, 1fr) / repeat(4, 1fr);
   gap: 16px;
   width: 100%;
   padding: 0 48px 0;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 1024px) {
+  .photo-grid {
+    margin: 92px 0 0;
+    grid-template: repeat(4, 1fr) / repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    margin: 88px 0 0;
+    grid-template: repeat(6, 1fr) / repeat(2, 1fr);
+    gap: 14px;
+    padding: 0 24px 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    margin: 64px 0 0;
+    grid-template: repeat(12, 1fr) / repeat(1, 1fr);
+    gap: 12px;
+    padding: 0 16px 0;
+  }
 }
