--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -5,5 +5,22 @@
   box-sizing: border-box;
   max-width: 460px;
   width: 100%;
- 
+}
+
+@media screen and (max-width: 1024px) {
+  .place__image {
+    max-width: 440px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__image {
+    max-width: 340px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__image {
+    max-width: 320px;
+  }
 }
