--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -3,8 +3,7 @@
   margin: 12px 0 0;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
-  letter-spacing: 2px;
+  line-height: 122%;
   color: #ffffff;
 }
 
