--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,3 +12,38 @@
   margin: 0;
 }
 
+@media screen and (max-width: 1024px) {
+  .place__paragraph {
+    max-width: 456px;
+  }
+  .place__paragraph:first-child {
+    margin: 0;
+    max-width: 456px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    margin: 25px 0 0;
+    font-size: 16px;
+    max-width: 352px;
+  }
+  .place__paragraph:first-child {
+    margin: 0;
+    font-size: 16px;
+    max-width: 352px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__paragraph {
+    margin: 25px 16px 0;
+    font-size: 16px;
+    max-width: 288px;
+  }
+  .place__paragraph:first-child {
+    margin: 32px 16px 0;
+    font-size: 16px;
+    max-width: 288px;
+  }
+}
