--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,9 +2,32 @@
 .place__title {
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
+  line-height: 106%;
   color: #ffffff;
   margin: 0;
   max-width: 460px;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 1024px) {
+  .place__title {
+    max-width: 440px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 110%;
+    max-width: 340px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__title {
+    font-size: 32px;
+    line-height: 109%;
+    margin: 0 16px 0;
+    max-width: 288px;
+  }
 }
