--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -2,7 +2,25 @@
   margin: 0;
   font-weight: 400;
   font-size: 12px;
-  line-height: 12px;
+  line-height: 170%;
   letter-spacing: 2px;
   color: #aaaaaa;
+}
+
+@media screen and (max-width: 1024px) {
+  .place__url-heading {
+    letter-spacing: 2px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__url-heading {
+    line-height: 100%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__url-heading {
+    line-height: 100%;
+  }
 }
