--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,7 +3,7 @@
   width: 100%;
   margin: 80px 0 0;
   display: grid;
-  grid-template-columns: calc(51.2712% - 40px / 2) calc(48.7288% - 40px / 2);
+  grid-template-columns: calc(48.7288% - 40px / 2) calc(51.2712% - 40px / 2);
   column-gap: 40px;
   row-gap: 48px;
   padding: 0 148px 0;
@@ -12,4 +12,52 @@
 
 .place:first-child {
   margin: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .place {
+    grid-template-columns: calc(49.1071% - 32px / 2) calc(50.8929% - 32px / 2);
+    column-gap: 32px;
+    row-gap: 48px;
+    padding: 0 48px 0;
+  }
+  .place:first-child {
+    margin: 0;
+    grid-template-columns: calc(49.1071% - 32px / 2) calc(50.8929% - 32px / 2);
+    column-gap: 32px;
+    row-gap: 48px;
+    padding: 0 48px 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place {
+    margin: 73px 0 0;
+    grid-template-columns: calc(49.1329% - 28px / 2) calc(50.8671% - 28px / 2);
+    column-gap: 28px;
+    padding: 0 24px 0;
+  }
+  .place:first-child {
+    margin: 0;
+    grid-template-columns: calc(49.1329% - 28px / 2) calc(50.8671% - 28px / 2);
+    column-gap: 28px;
+    padding: 0 24px 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place {
+    margin: 50px 0 0;
+    grid-template-columns: 1fr;
+    column-gap: 40px;
+    row-gap: 32px;
+    padding: 0;
+  }
+  .place:first-child {
+    margin: 0;
+    grid-template-columns: 1fr;
+    column-gap: 40px;
+    row-gap: 32px;
+    padding: 0;
+  }
 }
