--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,3 +5,15 @@
   margin: 92px 0 0;
   width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+  .places {
+    margin: 88px 0 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places {
+    margin: 64px 0 0;
+  }
+}
