--- a/pages/index.css
+++ b/pages/index.css
@@ -58,6 +58,24 @@
   background-color: #2a2c2f;
 }
 
+@media screen and (max-width: 1024px) {
+  .page {
+    max-width: 1024px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .page {
+    max-width: 768px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .page {
+    max-width: 320px;
+  }
+}
+
 .page,
 .header,
 .header__lang-link,
