--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,6 +8,7 @@
   row-gap: 48px;
   padding: 0 148px 0;
   box-sizing: border-box;
+  font-family: "Inter", Arial, sans-serif;
 }
 
 .place:first-child {
