--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   margin: 92px 0 0;
   width: 100%;
+  font-family: "Inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 768px) {
