--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,6 +5,7 @@
   width: 100%;
   box-sizing: border-box;
   min-height: 740px;
+  font-family: "Inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 1024px) {
