--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,19 +1,21 @@
 /*Блок*/
 .footer {
-  margin: 92px 48px 24px;
+  margin: 92px 48px 0;
+  padding-bottom: 24px;
   display: flex;
   justify-content: space-between;
+  font-family: "Inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 768px) {
   .footer {
-    margin: 88px 24px 24px;
+    margin: 88px 24px 0;
   }
 }
 
 @media screen and (max-width: 320px) {
   .footer {
-    margin: 64px 118px 24px 16px;
+    margin: 64px 118px 0 16px;
     justify-content: start;
     flex-direction: column;
   }
