--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,6 +6,7 @@
   margin: 0;
   display: flex;
   justify-content: space-between;
+  font-family: "Inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 1024px) {
