--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,12 +1,14 @@
 /*Текст-статистика в столбик*/
 .intro__list {
-  margin: 33px auto 0 0;
-  font-weight: 700;
+  margin: 0 auto 0 0;
   font-size: 12px;
   line-height: 150%;
   color: #ffffff;
 }
 
+.intro__list:first-child {
+  margin: 33px auto 0 0;
+}
 
 @media screen and (max-width: 1024px) {
   .intro__list {
