--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,6 +2,7 @@
 .intro {
   margin: 92px 442px 0 148px;
   max-width: 690px;
+  font-family: "Inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 1024px) {
