--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,6 +5,7 @@
   margin: 56px 0 0;
   padding: 0 148px 0;
   box-sizing: border-box;
+  font-family: "Inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 1024px) {
