--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,6 +7,7 @@
   width: 100%;
   padding: 0 48px 0;
   box-sizing: border-box;
+  font-family: "Inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 1024px) {
