--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,13 +1,12 @@
 /*Текст-статистика в столбик*/
 .intro__list {
-  margin: 0 auto 0 0;
+  margin: 33px auto 0 0;
   font-size: 12px;
   line-height: 150%;
   color: #ffffff;
-}
-
-.intro__list:first-child {
-  margin: 33px auto 0 0;
+  font-weight: 700;
+  padding: 0;
+  list-style-type: none;
 }
 
 @media screen and (max-width: 1024px) {
