--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -17,19 +17,25 @@
   opacity: 80%;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1152px) and (min-width: 960px) {
   .cover__title {
     margin: 195px auto 0;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 959px) and (min-width: 720px) {
   .cover__title {
     margin: 115px auto 0;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 719px) and (min-width: 540px) {
+  .page {
+    max-width: 600px;
+  }
+}
+
+@media screen and (max-width: 539px) and (min-width: 320px) {
   .cover__title {
     margin: 33px auto 0;
     font-size: 32px;
