--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,14 +8,14 @@
   font-family: "Inter", Arial, sans-serif;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1152px) and (min-width: 960px) {
   .cover {
     padding: 0;
     min-height: 640px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 959px) and (min-width: 720px) {
   .cover {
     margin: 90px 0 0;
     padding: 0;
@@ -23,7 +23,13 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 719px) and (min-width: 540px) {
+  .page {
+    max-width: 600px;
+  }
+}
+
+@media screen and (max-width: 539px) and (min-width: 320px) {
   .cover {
     margin: 66px 0 0;
     padding: 0;
