--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,7 +5,13 @@
   height: 100%;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 719px) and (min-width: 540px) {
+  .header__logo {
+    max-width: 160px;
+  }
+}
+
+@media screen and (max-width: 539px) and (min-width: 320px) {
   .header__logo {
     max-width: 142px;
   }
