--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,21 +5,27 @@
   font-family: "Inter", Arial, sans-serif;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1152px) and (min-width: 960px) {
   .intro {
     margin: 92px 286px 0 48px;
     max-width: 690px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 959px) and (min-width: 720px) {
   .intro {
     margin: 88px 24px 0;
     max-width: 720px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 719px) and (min-width: 540px) {
+  .page {
+    max-width: 600px;
+  }
+}
+
+@media screen and (max-width: 539px) and (min-width: 320px) {
   .intro {
     margin: 64px 16px 0;
     max-width: 288px;
