--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -10,19 +10,25 @@
   max-width: 640px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1152px) and (min-width: 960px) {
   .lead__subtitle {
     margin: 32px auto 0;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 959px) and (min-width: 720px) {
   .lead__subtitle {
     margin: 32px auto 0;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 719px) and (min-width: 540px) {
+  .page {
+    max-width: 600px;
+  }
+}
+
+@media screen and (max-width: 539px) and (min-width: 320px) {
   .lead__subtitle {
     margin: 16px auto 0;
     font-size: 16px;
