--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -8,21 +8,27 @@
   font-family: "Inter", Arial, sans-serif;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1152px) and (min-width: 960px) {
   .lead {
     margin: 48px 0 0;
     padding: 0 48px 0;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 959px) and (min-width: 720px) {
   .lead {
     margin: 48px 0 0;
     padding: 0;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 719px) and (min-width: 540px) {
+  .page {
+    max-width: 600px;
+  }
+}
+
+@media screen and (max-width: 539px) and (min-width: 320px) {
   .lead {
     margin: 48px 0 0;
     padding: 0;
