--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -7,7 +7,13 @@
   align-content: start;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 719px) and (min-width: 540px) {
+  .page {
+    max-width: 600px;
+  }
+}
+
+@media screen and (max-width: 539px) and (min-width: 320px) {
   .place__website {
     margin: 0 16px 0;
   }
