--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -16,25 +16,25 @@
   opacity: 80%;
 }
 
-@media screen and (max-width: 1152px) and (min-width: 960px) {
+@media screen and (max-width: 1150px) {
   .cover__overlay {
     min-height: 640px;
   }
 }
 
-@media screen and (max-width: 959px) and (min-width: 720px) {
+@media screen and (max-width: 960px) {
   .cover__overlay {
     min-height: 480px;
   }
 }
 
-@media screen and (max-width: 719px) and (min-width: 540px) {
+@media screen and (max-width: 720px) {
   .page {
     max-width: 600px;
   }
 }
 
-@media screen and (max-width: 539px) and (min-width: 320px) {
+@media screen and (max-width: 540px) {
   .cover__overlay {
     min-height: 200px;
   }
