--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -17,24 +17,19 @@
   opacity: 80%;
 }
 
-@media screen and (max-width: 1152px) and (min-width: 960px) {
+@media screen and (max-width: 1150px) {
   .header__lang-link {
     margin: 18px 18px 6px auto;
   }
 }
 
-@media screen and (max-width: 959px) and (min-width: 720px) {
+@media screen and (max-width: 960px) {
   .header__lang-link {
     margin: 18px 18px 6px auto;
   }
 }
-@media screen and (max-width: 719px) and (min-width: 540px) {
-  .page {
-    max-width: 600px;
-  }
-}
 
-@media screen and (max-width: 539px) and (min-width: 320px) {
+@media screen and (max-width: 540px) {
   .header__lang-link {
     font-size: 18px;
     line-height: 111%;
