--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,25 +9,25 @@
   font-family: "Inter", Arial, sans-serif;
 }
 
-@media screen and (max-width: 1152px) and (min-width: 960px) {
+@media screen and (max-width: 1150px) {
   .header {
     padding: 28px 48px 0;
   }
 }
 
-@media screen and (max-width: 959px) and (min-width: 720px) {
+@media screen and (max-width: 960px) {
   .header {
     padding: 28px 24px 0;
   }
 }
 
-@media screen and (max-width: 719px) and (min-width: 540px) {
+@media screen and (max-width: 720px) {
   .header {
     padding: 22px 20px 0;
   }
 }
 
-@media screen and (max-width: 539px) and (min-width: 320px) {
+@media screen and (max-width: 540px) {
   .header {
     padding: 16px 16px 0;
     max-height: calc(42px + 16px);
