--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -8,27 +8,28 @@
   font-family: "Inter", Arial, sans-serif;
 }
 
-@media screen and (max-width: 1152px) and (min-width: 960px) {
+@media screen and (max-width: 1150px) {
   .lead {
     margin: 48px 0 0;
     padding: 0 48px 0;
   }
 }
 
-@media screen and (max-width: 959px) and (min-width: 720px) {
+@media screen and (max-width: 960px) {
   .lead {
     margin: 48px 0 0;
     padding: 0;
   }
 }
 
-@media screen and (max-width: 719px) and (min-width: 540px) {
-  .page {
-    max-width: 600px;
+@media screen and (max-width: 720px) {
+  .lead {
+    margin: 48px 0 0;
+    padding: 0;
   }
 }
 
-@media screen and (max-width: 539px) and (min-width: 320px) {
+@media screen and (max-width: 540px) {
   .lead {
     margin: 48px 0 0;
     padding: 0;
