--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -10,14 +10,14 @@
   font-family: "Inter", Arial, sans-serif;
 }
 
-@media screen and (max-width: 1152px) and (min-width: 960px) {
+@media screen and (max-width: 1150px) {
   .photo-grid {
     margin: 92px 0 0;
     grid-template: repeat(4, 1fr) / repeat(3, 1fr);
   }
 }
 
-@media screen and (max-width: 959px) and (min-width: 720px) {
+@media screen and (max-width: 960px) {
   .photo-grid {
     margin: 88px 0 0;
     grid-template: repeat(6, 1fr) / repeat(2, 1fr);
@@ -26,13 +26,13 @@
   }
 }
 
-@media screen and (max-width: 719px) and (min-width: 540px) {
+@media screen and (max-width: 720px) {
   .page {
     max-width: 600px;
   }
 }
 
-@media screen and (max-width: 539px) and (min-width: 320px) {
+@media screen and (max-width: 540px) {
   .photo-grid {
     margin: 64px 0 0;
     grid-template: repeat(12, 1fr) / repeat(1, 1fr);
