--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,7 +12,7 @@
   margin: 0;
 }
 
-@media screen and (max-width: 1152px) and (min-width: 960px) {
+@media screen and (max-width: 1150px) {
   .place__paragraph {
     max-width: 456px;
   }
@@ -22,7 +22,7 @@
   }
 }
 
-@media screen and (max-width: 959px) and (min-width: 720px) {
+@media screen and (max-width: 960px) {
   .place__paragraph {
     margin: 25px 0 0;
     font-size: 16px;
@@ -35,13 +35,13 @@
   }
 }
 
-@media screen and (max-width: 719px) and (min-width: 540px) {
+@media screen and (max-width: 720px) {
   .page {
     max-width: 600px;
   }
 }
 
-@media screen and (max-width: 539px) and (min-width: 320px) {
+@media screen and (max-width: 540px) {
   .place__paragraph {
     margin: 25px 16px 0;
     font-size: 16px;
