--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -7,25 +7,25 @@
   color: #aaaaaa;
 }
 
-@media screen and (max-width: 1152px) and (min-width: 960px) {
+@media screen and (max-width: 1150px) {
   .place__url-heading {
     letter-spacing: 2px;
   }
 }
 
-@media screen and (max-width: 959px) and (min-width: 720px) {
+@media screen and (max-width: 960px) {
   .place__url-heading {
     line-height: 100%;
   }
 }
 
-@media screen and (max-width: 719px) and (min-width: 540px) {
+@media screen and (max-width: 720px) {
   .page {
     max-width: 600px;
   }
 }
 
-@media screen and (max-width: 539px) and (min-width: 320px) {
+@media screen and (max-width: 540px) {
   .place__url-heading {
     line-height: 100%;
   }
