--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -15,7 +15,7 @@
   margin: 0;
 }
 
-@media screen and (max-width: 1152px) and (min-width: 960px) {
+@media screen and (max-width: 1150px) {
   .place {
     grid-template-columns: calc(49.1071% - 32px / 2) calc(50.8929% - 32px / 2);
     column-gap: 32px;
@@ -31,7 +31,7 @@
   }
 }
 
-@media screen and (max-width: 959px) and (min-width: 720px) {
+@media screen and (max-width: 960px) {
   .place {
     margin: 73px 0 0;
     grid-template-columns: calc(49.1329% - 28px / 2) calc(50.8671% - 28px / 2);
@@ -46,13 +46,13 @@
   }
 }
 
-@media screen and (max-width: 719px) and (min-width: 540px) {
+@media screen and (max-width: 720px) {
   .page {
     max-width: 600px;
   }
 }
 
-@media screen and (max-width: 539px) and (min-width: 320px) {
+@media screen and (max-width: 540px) {
   .place {
     margin: 50px 0 0;
     grid-template-columns: 1fr;
