--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -7,19 +7,19 @@
   font-family: "Inter", Arial, sans-serif;
 }
 
-@media screen and (max-width: 959px) and (min-width: 720px) {
+@media screen and (max-width: 960px) {
   .places {
     margin: 88px 0 0;
   }
 }
 
-@media screen and (max-width: 719px) and (min-width: 540px) {
+@media screen and (max-width: 720px) {
   .page {
     max-width: 600px;
   }
 }
 
-@media screen and (max-width: 539px) and (min-width: 320px) {
+@media screen and (max-width: 540px) {
   .places {
     margin: 64px 0 0;
   }
