--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,8 +8,10 @@
 }
 
 @media screen and (max-width: 720px) {
-  .page {
-    max-width: 600px;
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 100%;
+    margin: 16px auto 0 0;
   }
 }
 
