--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -19,8 +19,11 @@
 }
 
 @media screen and (max-width: 720px) {
-  .page {
-    max-width: 600px;
+  .cover__subtitle {
+    margin: 22px auto 0;
+    font-size: 16px;
+    line-height: 114%;
+    max-width: 320px;
   }
 }
 
