--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -30,8 +30,11 @@
 }
 
 @media screen and (max-width: 720px) {
-  .page {
-    max-width: 600px;
+  .cover__title {
+    margin: 75px auto 0;
+    font-size: 52px;
+    line-height: 109%;
+    max-width: 380px;
   }
 }
 
