--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,14 +4,12 @@
   padding: 0 48px 0;
   width: 100%;
   box-sizing: border-box;
-  min-height: 740px;
   font-family: "Inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 1150px) {
   .cover {
     padding: 0;
-    min-height: 640px;
   }
 }
 
@@ -19,13 +17,13 @@
   .cover {
     margin: 90px 0 0;
     padding: 0;
-    min-height: 480px;
   }
 }
 
 @media screen and (max-width: 720px) {
-  .page {
-    max-width: 600px;
+  .cover {
+    margin: 78px 0 0;
+    padding: 0;
   }
 }
 
@@ -33,6 +31,5 @@
   .cover {
     margin: 66px 0 0;
     padding: 0;
-    min-height: 200px;
   }
 }
