--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -24,8 +24,12 @@
 }
 
 @media screen and (max-width: 720px) {
-  .page {
-    max-width: 600px;
+  .place__title {
+    font-size: 37px;
+    line-height: 109%;
+    margin: 0 20px 0;
+    max-width: 214px;
+    
   }
 }
 
