--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,6 +10,12 @@
   color: #ffffff;
 }
 
+@media screen and (max-width: 960px) {
+  .lead__title {
+    max-width: 720px;
+  }
+}
+
 @media screen and (max-width: 720px) {
   .lead__title {
     max-width: 490px;
@@ -22,6 +28,5 @@
   .lead__title {
     max-width: 288px;
     font-size: 40px;
-    line-height: 110%;
   }
 }
