--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -26,11 +26,20 @@
   }
 }
 
+@media screen and (max-width: 720px) {
+  .photo-grid {
+    margin: 78px 0 0;
+    grid-template: repeat(12, 1fr) / repeat(1, 1fr);
+    gap: 14px;
+    padding: 0 20px 0;
+  }
+}
+
 @media screen and (max-width: 540px) {
   .photo-grid {
     margin: 64px 0 0;
-    grid-template: repeat(12, 1fr) / repeat(1, 1fr);
     gap: 12px;
     padding: 0 16px 0;
   }
 }
+
