--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -38,12 +38,10 @@
 @media screen and (max-width: 720px) {
   .place__paragraph {
     margin: 25px 20px 0;
-    font-size: 16px;
     max-width: 560px;
   }
   .place__paragraph:first-child {
-    margin: 32px 20px 0;
-    font-size: 16px;
+    margin: 0 20px 0;
     max-width: 560px;
   }
 }
@@ -51,12 +49,10 @@
 @media screen and (max-width: 540px) {
   .place__paragraph {
     margin: 25px 16px 0;
-    font-size: 16px;
     max-width: 288px;
   }
   .place__paragraph:first-child {
-    margin: 32px 16px 0;
-    font-size: 16px;
+    margin: 0 16px 0;
     max-width: 288px;
   }
 }
