--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,17 +1,26 @@
 /*Картинка затемнения на фоне*/
 .cover__overlay {
-  background-color: #2a2c2f;
-  width: 100%;
-  box-sizing: border-box;
-  height: 100%;
-  opacity: 30%;
-  z-index: 2;
-  position: absolute;
+  display: flex;
+  position: relative;
   top: 0;
   left: 0;
-  margin: 0;
+  z-index: 1;
+  text-decoration: none;
+  flex-direction: column;
 }
 
-.cover__overlay:hover {
+.cover__overlay::before {
+  content: "";
+  background-color: #2a2c2f;
+  opacity: 30%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.cover__overlay:hover::before {
+  background-color: #2a2c2f;
   opacity: 80%;
 }
