--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -15,7 +15,7 @@
 @media screen and (max-width: 720px) {
   .footer__link {
     margin: 0 auto 32px 0;
-    display: inline-block;
+    display: flex;
     font-size: 24px;
     line-height: 100%;
   }
